@startuml Modul_E_Pengelolaan_Retur

' Pengaturan visual agar profesional dan fungsional
skinparam classAttributeIconSize 0
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam defaultFontName "Arial"
skinparam defaultFontSize 14
skinparam titleFontSize 20

title Pengelolaan Retur

    class CustomerReturn {
        - id: Integer
        - returnNumber: String
        - saleId: Integer
        - customerId: Integer
        - userId: Integer
        - totalValueReturned: Decimal
        - totalRefund: Decimal
        - compensationType: CompensationType
        - surplusStrategy: SurplusStrategy
        - createdAt: DateTime
        + validateInvoice(invoiceNumber: String): Boolean
        + addReturnItem(item: CustomerReturnItem): void
        + addExchangeItem(item: CustomerExchangeItem): void
        + calculateCompensation(): Decimal
        + finalizeReturn(): void
        + generateReturnReceipt(): String
    }

    class CustomerReturnItem {
        - id: Integer
        - productId: Integer
        - variantId: Integer
        - qty: Decimal
        - priceAtReturn: Decimal
        - reason: String
        - returnedToStock: Boolean
        + returnToStock(): void
        + markAsDamaged(): void
    }

    class CustomerExchangeItem {
        - id: Integer
        - productId: Integer
        - variantId: Integer
        - qty: Decimal
        - priceAtExchange: Decimal
        + validateExchangeStock(): Boolean
        + deductProductStock(): void
    }

    enum CompensationType {
        EXCHANGE
        CREDIT_NOTE
        REFUND
    }

    enum SurplusStrategy {
        CASH
        CREDIT_BALANCE
    }

    ' Relationships
    CustomerReturn "1" *-- "0..*" CustomerReturnItem : records return >
    CustomerReturn "1" *-- "0..*" CustomerExchangeItem : includes exchange >
    CustomerReturn ..> CompensationType : compensation type >
    CustomerReturn ..> SurplusStrategy : surplus strategy >
    CustomerReturn "0..*" -- "1" Customer : performed by >
    CustomerReturn "0..*" -- "1" Sale : return of >
    CustomerReturn "0..*" -- "1" User : processed by >
    CustomerReturnItem "0..*" -- "1" ProductVariant : refers to >
    CustomerReturnItem "0..*" -- "1" Product : refers to >
    CustomerExchangeItem "0..*" -- "1" ProductVariant : refers to >
    CustomerExchangeItem "0..*" -- "1" Product : refers to >

    class Sale <<external>> {
        - id: Integer
        - invoiceNumber: String
    }
    class Customer <<external>> {
        - id: Integer
        - name: String
        + updateSaldo(nominal: Decimal): void
    }
    class ProductVariant <<external>> {
        - id: Integer
        - name: String
        - sku: String
        + updateStock(amount: Decimal): void
    }
    class Product <<external>> {
        - id: Integer
        - name: String
        - sku: String
    }
    class User <<external>> {
        - id: Integer
        - name: String
    }



@enduml
